Change color of buttons

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -45,14 +45,15 @@ h5 {
     -webkit-border-radius: 40px;
     border-radius: 40px;
     display: inline-block;
-    text-transform: uppercase
+    text-transform: uppercase;
+    background: #ffffff80;
 }
 
 .btn:hover,
 .btn:focus {
     color: #fff;
-    border-color: #e8ca6f;
-    background-color: #e8ca6f
+    border-color: #e86f6f;
+    background-color: #e86f6f;
 }
 
 .btn-white {
@@ -73,20 +74,20 @@ h5 {
 
 .btn-fill {
     color: #fff;
-    border: solid 2px #e8ca6f;
+    border: solid 2px #c35d5d;
     -moz-border-radius: 40px;
     -webkit-border-radius: 40px;
     border-radius: 40px;
     display: inline-block;
     text-transform: uppercase;
-    background-color: #e8ca6f
+    background-color: #c35d5d;
 }
 
 .btn-fill:hover,
 .btn-fill:focus {
     color: #fff;
-    background-color: #d3b56a;
-    border-color: #d3b56a
+    background-color: #890f0f;
+    border-color: #890f0f;
 }
 
 .btn-small {
@@ -128,7 +129,7 @@ section.blog {
 }
 
 a {
-    color: #e8ca6f;
+    color: #c35d5d;
     -webkit-transition-timing-function: ease;
     transition-timing-function: ease;
     -webkit-transition-duration: 200ms;
