--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -907,7 +907,7 @@ header .member-actions {
 #video-content {
     width: 100%;
     height: 100%;
-    padding-top: 70px;
+    padding-top: 80px;
     position: relative;
     background: #333300aa;
     text-align: center;
@@ -966,7 +966,7 @@ header .member-actions {
 }
 
 .rsvp {
-    padding-bottom: 140px
+    padding: 40px 0;
 }
 
 .rsvp .rsvp-form .rsvp-btn {
@@ -1125,4 +1125,9 @@ input.add-to-calendar-checkbox[type="checkbox"] {
     left: 0;
     width: 100% !important;
     height: 100% !important;
+}
+.reduced-padding {
+    padding-left: 7px;
+    padding-right: 7px;
+    margin-top: 9px;
 }
