Change registry section

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -105,11 +105,13 @@ h5 {
 section#overview,
 section.features-extra,
 section#instagram,
+section#registry,
 section.rsvp {
     background: #f8f9fd
 }
 
 section#intro,
+section#charities,
 section.features,
 section.events,
 section.blog {
