--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1139,3 +1139,13 @@ input.add-to-calendar-checkbox[type="checkbox"] {
     font-weight: 500;
     margin-bottom: 25px;
 }
+table.travel-times {
+    margin: 0 auto 40px auto;
+    text-align: left;
+}
+table.travel-times td {
+    padding-right: 10px;
+}
+table.travel-times td:last-child {
+    padding-right: 0px;
+
